# impossible-insiders

backend/: .env  Dockerfile  main.py  models.py  multi_agent_data.db  pyproject.toml  requirements.txt  server.py  service_account.json
backend/multi_tool_agent/: agent.py
cloudrun/: README.md  deploy.sh  pyproject.toml  requirements.txt  test.ipynb
cloudrun/ingestion_cloud_function.egg-info/: PKG-INFO  SOURCES.txt
cloudrun/notebooks/: cloud_function_vision.ipynb
cloudrun/utils/: common_utils.py
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/docs/: blueprint.md
frontend/public/: manifest.json  metadata.json
frontend/public/preloaded_videos/: metadata.json
frontend/src/ai/: dev.ts
frontend/src/app/: actions.ts  globals.css  layout.tsx  page.tsx
frontend/src/components/: action-checklist.tsx  camera-operator-role.tsx  commander-role.tsx  control-centre-role.tsx  event-planning-form.tsx  header.tsx  incident-severity-pie-chart.tsx  incident-status-bar-chart.tsx  incident-type-pie-chart.tsx  incident-zone-bar-chart.tsx  incidents-dashboard.tsx  (+6 more)
ingestion-cloud-function/: Dockerfile  main.py
ingestion-cloud-function/ingestion_cloud_function.egg-info/: requires.txt
ingestion-cloud-function/notebooks/: gemini_notebook.ipynb
ingestion-cloud-function/utils/: gemini_segmentation.py  vision_ml.py
project-gemini-image/: Dockerfile  deploy.sh  main.py  requirements.txt  test.ipynb
project-vision-forecast/: .dockerignore  Dockerfile  cloud_function_vision.ipynb  cloud_function_vision_ml.py  requirements.txt
(+18 files in other folders)
